--- a/apple_profile.json
+++ b/apple_profile.json
@@ -2,9 +2,9 @@
   "company_name": "apple",
   "industry": "Technology",
   "founding_date": "1976",
-  "business_model": "Hardware and Software",
+  "business_model": "Consumer Electronics and Software",
   "target_customers": "General public",
-  "key_value_proposition": "Apple Inc. designs, manufactures, and markets consumer electronics, computer software, and online services.",
+  "key_value_proposition": "Apple offers a range of consumer electronics and software products known for their design, user experience, and ecosystem integration.",
   "geographical_focus": "Global",
   "funding_stage": "Public"
 }
